workspace-sf/force-app/main/default/objects/Garantia__c/Garantia__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro das garantias</description>
    <label>Garantia</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garantias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>