workspace-sf/force-app/main/default/objects/Garantia__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <label>Sigla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>