workspace-sf/force-app/main/default/objects/Garantia__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>