workspace-sf/force-app/main/default/objects/Garantia__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoGarantia</valueSetName>
    </valueSet>
</CustomField>