workspace-sf/force-app/main/default/objects/Garantia__c/validationRules/ValidarVigenciaInicial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarVigenciaInicial</fullName>
    <active>true</active>
    <errorConditionFormula>VigenciaInicial__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>A vigência não pode ser inferior a data atual</errorMessage>
</ValidationRule>