workspace-sf/force-app/main/default/objects/Garantia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sigla__c</columns>
    <columns>Tipo__c</columns>
    <columns>VigenciaInicial__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as garantias</label>
</ListView>